# auto-pagefind

./: Cargo.toml  LICENSE  README.md
react/: README.md  package-lock.json  package.json  tsconfig.json
react/lib/: pagefind.tsx
src/: main.rs
